--- a/phantomgames/Home/HomeScreen.storyboard
+++ b/phantomgames/Home/HomeScreen.storyboard
@@ -36,6 +36,10 @@
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
+                                        <activityIndicatorView key="backgroundView" opaque="NO" contentMode="center" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="Rdk-03-2OO" userLabel="Spinner">
+                                            <rect key="frame" x="0.0" y="0.0" width="430" height="403.33333333333337"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </activityIndicatorView>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="cell" id="z15-IX-gTx" customClass="CustomCollectionViewCell" customModule="phantomgames" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="95.333333333333329" width="339" height="213"/>
@@ -178,6 +182,7 @@
                         <outlet property="browserImage" destination="VdI-sV-nBe" id="zsS-pJ-0d8"/>
                         <outlet property="homeCollectionView" destination="Ma1-OL-EbA" id="KZb-cf-AnE"/>
                         <outlet property="pcImage" destination="CvH-7K-TVs" id="FYR-NI-3F2"/>
+                        <outlet property="spinner" destination="Rdk-03-2OO" id="hE3-6z-Njr"/>
                         <outlet property="tableView" destination="PrN-Kg-JvQ" id="fOj-1y-Yt1"/>
                         <segue destination="p5h-c3-Vkl" kind="show" identifier="GameDetailScreenSegue" id="jPC-ws-abG"/>
                     </connections>
