--- a/phantomgames/GameDetails/GameDetailStoryboard.storyboard
+++ b/phantomgames/GameDetails/GameDetailStoryboard.storyboard
@@ -50,19 +50,19 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W1f-vU-Zgv">
-                                                <rect key="frame" x="311" y="104.99999999999994" width="44" height="20.333333333333329"/>
+                                                <rect key="frame" x="6" y="104.99999999999994" width="44" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Platform" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8HE-Zu-btz">
-                                                <rect key="frame" x="311" y="133.33333333333331" width="64.666666666666686" height="20.333333333333343"/>
+                                                <rect key="frame" x="6" y="133.33333333333331" width="64.666666666666671" height="20.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Short description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DL8-R9-oyt">
-                                                <rect key="frame" x="311" y="161.66666666666669" width="131.33333333333337" height="20.333333333333343"/>
+                                                <rect key="frame" x="6" y="161.66666666666669" width="131.33333333333334" height="20.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -94,8 +94,12 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="DXd-88-2B0" secondAttribute="trailing" id="A3z-7V-MXO"/>
                                     <constraint firstItem="DXd-88-2B0" firstAttribute="leading" secondItem="wUU-1o-4UW" secondAttribute="leading" id="Dg9-K7-V1J"/>
+                                    <constraint firstItem="DXd-88-2B0" firstAttribute="top" secondItem="wUU-1o-4UW" secondAttribute="top" constant="20" symbolic="YES" id="JUu-P5-fc8"/>
                                     <constraint firstItem="DXd-88-2B0" firstAttribute="top" secondItem="wUU-1o-4UW" secondAttribute="top" id="NNb-85-Wiv"/>
+                                    <constraint firstItem="DXd-88-2B0" firstAttribute="leading" secondItem="wUU-1o-4UW" secondAttribute="leading" constant="24" id="SL1-PT-de9"/>
+                                    <constraint firstAttribute="trailing" secondItem="DXd-88-2B0" secondAttribute="trailing" constant="24" id="Uxb-Rr-SKs"/>
                                     <constraint firstAttribute="bottom" secondItem="DXd-88-2B0" secondAttribute="bottom" id="cpI-xh-9ZJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="DXd-88-2B0" secondAttribute="bottom" constant="20" symbolic="YES" id="r6q-kk-gta"/>
                                 </constraints>
                             </stackView>
                         </subviews>
