--- a/phantomgames/UserInterfaces/Base.lproj/Main.storyboard
+++ b/phantomgames/UserInterfaces/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                     <connections>
                         <segue destination="LQ5-Vn-8K3" kind="relationship" relationship="viewControllers" id="FPw-O2-E2a"/>
                         <segue destination="B8m-HG-5oh" kind="relationship" relationship="viewControllers" id="Idk-M7-Qjc"/>
-                        <segue destination="gCi-HK-gWl" kind="relationship" relationship="viewControllers" id="rDA-hh-f71"/>
+                        <segue destination="0b0-LF-SlO" kind="relationship" relationship="viewControllers" id="Rba-ce-er8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FaZ-fj-5AU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -103,20 +103,33 @@
             <point key="canvasLocation" x="1495" y="563"/>
         </scene>
         <!--Account-->
-        <scene sceneID="vbt-ST-XLB">
+        <scene sceneID="zMo-Gx-Z7X">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="gCi-HK-gWl" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rlh-AT-K7O">
+                <viewController title="Account" id="0b0-LF-SlO" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IGt-Nh-VTf">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="2ej-KJ-wi2"/>
-                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                        <viewLayoutGuide key="safeArea" id="p7z-oJ-zNR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Account" image="person.crop.circle" catalog="system" id="l5d-sl-rWJ"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="1b4-JW-LpE"/>
+                    <connections>
+                        <segue destination="GTl-GT-zcK" kind="show" id="8AJ-q6-csz"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ahg-S2-3P9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eu1-Ka-ssf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2763" y="544"/>
+            <point key="canvasLocation" x="2813" y="396"/>
+        </scene>
+        <!--AccountScreen-->
+        <scene sceneID="RgV-yG-iIH">
+            <objects>
+                <viewControllerPlaceholder storyboardName="AccountScreen" id="GTl-GT-zcK" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="8Rf-MD-Icb"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JhE-iB-l7w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2649" y="1030"/>
         </scene>
         <!--SearchGame-->
         <scene sceneID="XTH-mq-lUG">
@@ -132,9 +145,8 @@
     <resources>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
-        <image name="person.crop.circle" catalog="system" width="128" height="123"/>
-        <systemColor name="systemGray3Color">
-            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
