--- a/phantomgames/UserInterfaces/Base.lproj/Main.storyboard
+++ b/phantomgames/UserInterfaces/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="IQs-9k-TNk" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="97s-KT-9vF"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" selectionIndicatorImage="person.crop.circle" catalog="system" id="9C1-uS-MYw">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="9C1-uS-MYw">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.14729325488360245" green="0.14729325488360245" blue="0.14729325488360245" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
@@ -114,7 +114,7 @@
         <scene sceneID="XTH-mq-lUG">
             <objects>
                 <viewControllerPlaceholder storyboardName="SearchGame" id="VNZ-W8-nhG" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="G45-HE-bbm"/>
+                    <navigationItem key="navigationItem" title="Search" id="G45-HE-bbm"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LQw-9m-fP6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -124,11 +124,15 @@
         <scene sceneID="kgX-Wa-VC1">
             <objects>
                 <navigationController title="Accounts" automaticallyAdjustsScrollViewInsets="NO" id="3pj-i1-aCh" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" selectedImage="character.book.closed.fill" catalog="system" id="fVS-E1-EY0"/>
+                    <tabBarItem key="tabBarItem" title="Accounts" image="person.circle" catalog="system" selectedImage="person.circle" id="fVS-E1-EY0"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gga-2q-aoj">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Gga-2q-aoj">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -141,9 +145,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="character.book.closed.fill" catalog="system" width="115" height="128"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
-        <image name="person.crop.circle" catalog="system" width="128" height="123"/>
+        <image name="person.circle" catalog="system" width="128" height="123"/>
     </resources>
 </document>
